--- a/gb/22/5/17/n13739350.md
+++ b/gb/22/5/17/n13739350.md
@@ -160,14 +160,14 @@
 
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738480.md#1">美中期选举周二初选繁忙 七场选赛抢先看</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741274.md#1">观察家：若拜登取消对华关税 将是政策失误</a></li>
 <li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741348.md#1">研究创建国家级亚太裔博物馆 参议院通过</a></li>
 <li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741314.md#1">成本飙涨 纽约上州商团吁停止七项激进立法</a></li>
-<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741222.md#1">美参院通过立法 拨400亿美元援助乌克兰</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/ychojm359/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/10/7/28/n2978870.md#1" target="_blank">鲜为人知的马克思之八：魔性的马克思</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/9/n11172953.md#1" target="_blank">只做了这一件事 他们绝处逢生（二）</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/2/23/n11888963.md#1" target="_blank">王友群：唐山大地震是天灾更是人祸</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/7/16/n8107028.md#1" target="_blank">澳洲出新书 探究法轮功健身奇效背后奥秘</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
